# rest-api

./: .gitignore  Cargo.toml  docker-compose.yml
src/: handlers.rs  main.rs  models.rs  utils.rs
