[package]
name = "rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"]}
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net"] }
